--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   "devDependencies": {
     "eslint": "^2.13.1",
     "eslint-config-formidable": "^2.0.1",
-    "eslint-plugin-filenames": "^1.1.0"
+    "eslint-plugin-filenames": "^1.1.0",
+    "eslint-plugin-import": "^2.0.1"
   },
   "dependencies": {
-    "eslint-plugin-import": "^2.0.1"
+    "async": "^2.1.1",
+    "chalk": "^1.1.3",
+    "commander": "^2.9.0",
+    "diff": "^3.0.1",
+    "tar": "^2.2.1",
+    "temp": "^0.8.3"
   }
 }
