--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "diff": "^3.0.1",
+    "recursive-readdir": "^2.1.0",
     "tar": "^2.2.1",
     "temp": "^0.8.3"
   }
