--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "diff": "^3.0.1",
     "file-type": "^3.8.0",
     "isbinaryfile": "^3.0.1",
+    "minimatch": "^3.0.4",
     "recursive-readdir": "^2.1.0",
     "tar": "^2.2.1",
     "temp": "^0.8.3"
