--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "async": "^2.1.1",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "crlf-normalize": "^1.0.2",
     "diff": "^3.0.1",
     "file-type": "^3.8.0",
     "isbinaryfile": "^3.0.1",
